--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Book rooms using Archilogic Floor Plan Engine" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <script src="https://code.archilogic.com/fpe-sdk/v1.5.5/fpe.js??key=%REACT_APP_ARCHILOGIC_PUBLISHABLE_API_KEY%"></script>
+    <script src="https://code.archilogic.com/fpe-sdk/v2.0.0/fpe.js?key=%REACT_APP_ARCHILOGIC_PUBLISHABLE_API_KEY%"></script>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
