--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Book rooms using Archilogic Floor Plan Engine" />
+    <meta
+      name="description"
+      content="Book rooms using Archilogic Floor Plan Engine"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <script src="https://code.archilogic.com/fpe-sdk/v3.1.x/fpe.js"></script>
@@ -14,12 +16,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Room Booking</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
-</body>
-
+  </body>
 </html>
