feat: update title to desk & room booking

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Room Booking</title>
+    <title>Archilogic Desk & Room Booking Example</title>
   </head>
 
   <body>
